--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -20,18 +20,17 @@
 
 		<div class="tabs" style="margin-top:30px;">
 
-			<div class="tabs-nav">
+			<div class="tabs-nav" >
 				<ul class="tabs-list">
 					<li><a class="live-events" href="#live-events" style="text-decoration: none;">Live</a></li>
 					<li><a class="draft-events" href="#draft-events" style="text-decoration: none;">Draft</a></li>
-					<li><a class="template-events" href="#template-events" style="text-decoration: none;">Templates</a></li>
+					<!--  <li><a class="template-events" href="#template-events" style="text-decoration: none;">Templates</a></li>  -->
 					<li><a class="past-events" href="#past-events" style="text-decoration: none;">Past</a></li>
-					<li>
-						<div style="margin-left:180px; margin-top:9px;">
-							<input type="submit" class="button-secondary" value="Create new event">
-						</div>
-					</li>
 				</ul>
+
+				<div style="padding-top:10px; text-align: end;">
+					<input type="submit" class="button-secondary" value="Create new event">
+				</div>
 			</div>
 
 
