--- a/app/views/create-event/go-live.html
+++ b/app/views/create-event/go-live.html
@@ -47,6 +47,9 @@
       </h1>
 
 
+	  <form action="/make-draft-live" method="get" class="form">
+
+
 		<div class="form-group" style="margin-top:20px; margin-bottom:30px" >
 			<label class="form-label-bold" >
 				Who can access the event page?
@@ -65,18 +68,75 @@
 		</div>
 
 
-		<form action="/make-draft-live" method="get" class="form">
 
 
-		<div style="margin-top:60px; margin-bottom:20px;">
-			<p class="heading-medium">Tracking links</p>
-			{% include "includes/tracking-links-go-live.html" %}
+
+		<div class="form-group" style="margin-top:20px; margin-bottom:40px" >
+			<label class="form-label-bold" >
+				{{ session.eventsLiveURLS[session.currentEventShowing][0][1] }}
+			</label>
+
+			<!-- EDIT MODE -->
+			<div id="edit-mode" style="display:none; margin-bottom:10px">
+				<textarea type="text" class="form-control" id="new-main-url" name="new-main-url" rows="2"
+						  style="width: 70%;  margin-top:0px; margin-bottom:10px;">{{session.eventsLiveURLS[session.currentEventShowing][1][1]}}</textarea>
+				<input style="width:10%;" id="save-button" type="submit" class="button" formaction="/update-main-event-link-go-live" value="Save">
+			</div>
+
+			<!-- VIEW MODE -->
+			<div id="view-mode">
+				<p>{{ session.eventsLiveURLS[session.currentEventShowing][1][1] }}
+					<br><span style="text-decoration: underline;  color: #0000EE;" onclick="editMainLink()">Change link</span>
+				</p>
+			</div>
+
+
 		</div>
+
+
+
+
+
+		<div class="form-group" style=" margin-bottom:20px;">
+			<label class="form-label-bold" >
+				Do you want to add tracking URL links now
+				<span class="form-hint">Track the effectiveness of your marketing channels</span>
+			</label>
+
+			<!-- {{ session.eventsLiveURLS[session.currentEventShowing][0].length }}  -->
+
+			<div class="form-date" style="margin-top:5px">
+				<div class="multiple-choice" style="margin-bottom:10px">
+					<input id="radio-links-1" type="radio" name="radio-markets" value="no"
+						   {% if session.eventsLiveURLS[session.currentEventShowing][0].length < 3 %} checked="checked" {% endif %}>
+					<label for="radio-links-1">No - do this later</label>
+				</div>
+				<div class="multiple-choice" style="margin-bottom:10px" data-target="tracking-links-section">
+					<input id="radio-links-2" type="radio" name="radio-markets" value="yes"
+						   {% if 2 < session.eventsLiveURLS[session.currentEventShowing][0].length %} checked="checked" {% endif %}>
+					<label for="radio-links-2">Yes - add links now</label>
+				</div>
+			</div>
+
+
+			<div 	{% if session.eventsLiveURLS[session.currentEventShowing][0].length < 3 %}
+						class="form-group panel panel-border-narrow js-hidden"
+					{% else %}
+						class="form-group panel panel-border-narrow"
+					{% endif %}
+					id="tracking-links-section" style="margin-top:10px; margin-bottom:20px;">
+
+				{% include "includes/tracking-links-go-live.html" %}
+			</div>
+
+		</div>
+
+
 
 
 		  <div class="form-group" style="margin-top:20px">
 			  <input type="submit" class="button" value="Make the event live">
-			  <p style="margin-top:25px"><a href="/create-event/tickets">I'll complete this later - I don't have this information yet</a></p>
+			  <!-- <p style="margin-top:25px"><a href="/create-event/tickets">I'll complete this later - I don't have this information yet</a></p>  -->
 		  </div>
 
 	  </form>
@@ -89,12 +149,10 @@
 
 
 <script>
-	// When pressing the get main image button it swap in an image
-
-	function hide()
+	function editMainLink()
 	{
-		document.getElementById('main-button-image').style.display = 'none';
-		document.getElementById('image-area').style.display = 'inline';
+		document.getElementById('edit-mode').style.display = 'block';
+		document.getElementById('view-mode').style.display = 'none';
 	}
 
 </script>
